--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.sql.init.platform=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/finder
+spring.datasource.username=finder
+spring.datasource.password=
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
