--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.sql.init.platform=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/finder
-spring.datasource.username=finder
-spring.datasource.password=
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+server.port=8088
+
+spring.cloud.stream.bindings.reportPositions-out-0.destination=aircraftpositions
+spring.cloud.stream.bindings.reportPositions-out-0.binder=rabbit
